--- a/index.html
+++ b/index.html
@@ -1,67 +1,147 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Emergenzeprato by TeoSoft80</title>
+    <meta name="description" content="Emergenzeprato : Gestore fonti del progetto @emergenzeprato . Data management system to manage meteo and emergency information with social media">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Emergenzeprato</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Emergenzeprato</h1>
-        <p>Gestore fonti del progetto @emergenzeprato . Data management system to manage meteo and emergency information with social media</p>
 
-        <p class="view"><a href="https://github.com/TeoSoft80/Emergenzeprato">View the Project on GitHub <small>TeoSoft80/Emergenzeprato</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/TeoSoft80/Emergenzeprato">View on GitHub</a>
 
+          <h1 id="project_title">Emergenzeprato</h1>
+          <h2 id="project_tagline">Gestore fonti del progetto @emergenzeprato . Data management system to manage meteo and emergency information with social media</h2>
 
-        <ul>
-          <li><a href="https://github.com/TeoSoft80/Emergenzeprato/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/TeoSoft80/Emergenzeprato/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/TeoSoft80/Emergenzeprato">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <p>Il sistema EmergenzePrato nasce con l’intento di fornire tramite un unico canale twitter segnalazioni relative al maltempo a Prato e provincia mischiando informazioni di fonti ufficiali con segnalazioni civiche.</p>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/TeoSoft80/Emergenzeprato/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/TeoSoft80/Emergenzeprato/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <p>Il sistema EmergenzePrato nasce con l’intento di fornire tramite un unico canale di segnalazioni relative al maltempo a Prato e provincia mischiando informazioni di fonti ufficiali con segnalazioni civiche.</p>
 
 <p>EmergenzePrato è un canale che puoi seguire su Twitter iscrivendoti al social network gratuitamente.</p>
 
 <p>Inoltre il servizio comunica:</p>
 
+<p>Le previsioni <a href="http://www.lamma.rete.toscana.it/previ/ita/xml/comuni_web/dati/prato.xml">Lamma</a> del giorno e le previsioni del giorno dopo relative a Prato (grazie <a href="http://open.toscana.it/">OpenToscana</a>)
+Il <a href="http://www.biometeo.it/">Biometeo</a> relativo a Prato
+Le situazioni di rischio relative a Prato provenienti dal <a href="http://www.cfr.toscana.it/">Centro Funzionale Servizio Idrogeologico Toscana</a> (grazie <a href="https://twitter.com/lucabonuc">Luca Bonuccelli</a>)
+Eventuali Aggiornamenti della <a href="http://www.protezionecivile.comune.prato.it/emergenze/">pagina web emergenze</a> della Protezione Civile di Prato
+Le temperature rilevate tramite <a href="http://www.wunderground.com/weather/api/">questo servizio</a> (grazie <a href="https://twitter.com/alf_crisci">Alfonso Crisci</a>)
+Le foto Instagram taggate con #pratopioggia
+I post inviati tramite <a href="https://www.facebook.com/groups/1546332912286384/">il gruppo Facebook</a> #emergenzeprato
+I tweet indirizzati a @emergenzeprato
+I tweet contenenti uno dei seguenti tag:</p>
+
 <ul>
-<li>Le previsioni Lamma del giorno e le previsioni del giorno dopo relative a Prato (grazie OpenToscana)</li>
-<li>Il Biometeo relativo a Prato</li>
-<li>Le situazioni di rischio relative a Prato provenienti dal Servizio Idrogeologico Regionale (grazie Luca Bonuccelli)</li>
-<li>Eventuali Aggiornamenti dalla Pagina Web Emergenze della Protezione Civile di Prato</li>
-<li>Le temperature rilevate tramite questo servizio (grazie Alfonso Crisci)</li>
-<li>Le foto Instagram taggate con #pratopioggia</li>
-<li>I post inviati tramite il gruppo Facebook #emergenzeprato</li>
-<li>I tweet indirizzati a @emergenzeprato</li>
-<li>I tweet contenenti uno dei seguenti tag:</li>
-<li>* #pratoterremoto per segnalazioni relative a terremoto</li>
-<li>* #pratoneve per segnalazioni relative a neve a Prato</li>
-<li>* #pratopioggia per segnalazioni relative a pioggia a Prato</li>
-<li>* #cantagalloneve per segnalazioni relative a neve a Cantagallo</li>
-<li>* #vaianoneve per segnalazioni relative a neve a Vaiano</li>
-<li>* #vernioneve per segnalazioni relative a neve a Vernio</li>
-<li>* #pratovento per le segnalazioni relative a vento a Prato</li>
-<li>I dati meteo Lamma e il Biometeo su Telegram se si inviano i comandi predefiniti all’utente @emergenzeprato_bot </li>
+<li>#pratoterremoto per segnalazioni relative a terremoto</li>
+<li>#pratoneve per segnalazioni relative a neve a Prato</li>
+<li>#pratopioggia per segnalazioni relative a pioggia a Prato</li>
+<li>#cantagalloneve per segnalazioni relative a neve a Cantagallo</li>
+<li>#vaianoneve per segnalazioni relative a neve a Vaiano</li>
+<li>#vernioneve per segnalazioni relative a neve a Vernio</li>
+<li>#pratovento per le segnalazioni relative a vento a Prato</li>
 </ul>
 
-<p>Per chi volesse implementare un servizio simile può fare riferimento <a href="http://pratosmart.teo-soft.com/fatti-un-pratopioggia-tutto-tuo-e-chiamalo-hopratopioggiaancheio/">a questo post</a> come linea guida.</p>
+<p>I dati vengono inviati anche su <strong>Telegram</strong> se si inviano i comandi predefiniti all’utente @emergenzeprato_bot .</p>
+
+<p>Per chi volesse implementare un servizio simile può fare riferimento a <a href="http://pratosmart.teo-soft.com/fatti-un-pratopioggia-tutto-tuo-e-chiamalo-hopratopioggiaancheio/">questo post</a> come linea guida.</p>
+
+<h1>
+<a id="emergenzeprato-data-manager" class="anchor" href="#emergenzeprato-data-manager" aria-hidden="true"><span class="octicon octicon-link"></span></a>Emergenzeprato data manager</h1>
+
+<hr>
+
+<p>TWITTER</p>
+
+<p>Gli script per inviare i tweet vanno eseguiti con la periodicità con cui si vuole tuittare le informazioni, è possibile creare secondo lo stesso approccio tanti script quanti se ne vogliono.</p>
+
+<p>Si preleva i dati delle fonti Lamma, Biometeo e CFR Toscana e si tuittano i dati su @emergenzeprato</p>
+
+<p>L'account @emergenzeprato rituitta tutti i tweet con tag ben precisi e le foto Instagram #pratopioggia</p>
+
+<p>Inoltre tutti i tweet taggati con un ht definito e geolocalizzazione vengono mappati su pratosmart.org</p>
+
+<hr>
+
+<p>TELEGRAM</p>
+
+<p>Aggiunto anche Telegram bot (sviluppato da <a href="https://github.com/Eleirbag89/TelegramBotPHP">https://github.com/Eleirbag89/TelegramBotPHP</a>). </p>
+
+<ul>
+<li>Creare un bot su Telegram </li>
+<li>definire i comandi da inviare e gestire con getUpdates.php</li>
+<li>definire come prelevare i dati con getdata.php</li>
+<li>Creare un Cron Job per eseguire getUpadates.php ad intervalli di tempo regolari (per emergenzeprato è eseguito ogni minuto).</li>
+</ul>
+
+<p>Nel caso si voglia gestire emergenzepratbot con un webhook su un server allora utilizzare update.php</p>
+
+<p>Per usare Emergenzeprato su Telegram:</p>
+
+<ul>
+<li>aggiungere  @emergenzeprato_bot su Telegram</li>
+<li>inviare a emergenzeprato i comandi per ricevere gli aggiornamenti come indicato qui <a href="http://pratosmart.teo-soft.com/emergenzeprato-cresce-telegram-per-sapere-il-meteo-a-prato/">http://pratosmart.teo-soft.com/emergenzeprato-cresce-telegram-per-sapere-il-meteo-a-prato/</a>
+</li>
+</ul>
+
+<hr>
+
+<p>GESTIONE DEI JOB
+Un esempio di come va strutturata la tabella dei CRON per schedulare i task. Occorre schedulare i cron sulla base delle esigenze. il file storage.php aggiorna (ogni ora) i dati dai rispettivi siti alla cartella data da cui poi i BOT li prelevano. </p>
+
+<p>(* * * * * php /home/pi/emergenzeprato/TelegramBot/getUpdates.php)</p>
+
+<p>(00  00-16 * * * cd /home/pi/emergenzeprato &amp;&amp; php storage.php)</p>
+
+<p>(00 09,10 * * * cd /home/pi/emergenzeprato/TwitterBot &amp;&amp; php tweet_meteo.php "oggi") </p>
+
+<p>(00 07,12,16,00 * * * cd /home/pi/emergenzeprato/TwitterBot &amp;&amp; php tweet_temperature.php)</p>
+
+<p>etc...</p>
+
+<hr>
+
+<p>SOCIAL NETWORK</p>
+
+<p>Se si vuole integrare con regole sui social network può essere usato IFTTT come usato qui
+<a href="https://ifttt.com/p/pratopioggia/shared">https://ifttt.com/p/pratopioggia/shared</a></p>
+
+<hr>
+
+<p>INFORMAZIONI</p>
+
+<p>Per info pratosmart.org</p>
+
+<p>Qui la presentazione del progetto
+<a href="http://pratosmart.teo-soft.com/emergenzeprato/">http://pratosmart.teo-soft.com/emergenzeprato/</a></p>
+
+<p><a href="https://docs.google.com/presentation/d/1yeZxMVFpiL8zfhG52U2zi8MRjWqDWiptkiPIeef9ntg/pub?start=false&amp;loop=false&amp;delayms=3000">https://docs.google.com/presentation/d/1yeZxMVFpiL8zfhG52U2zi8MRjWqDWiptkiPIeef9ntg/pub?start=false&amp;loop=false&amp;delayms=3000</a> (CC-BY-SA)</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/TeoSoft80">TeoSoft80</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Emergenzeprato maintained by <a href="https://github.com/TeoSoft80">TeoSoft80</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -72,6 +152,7 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
+
 
   </body>
 </html>
