--- a/index.html
+++ b/index.html
@@ -1,63 +1,60 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Emergenzeprato : Gestore fonti del progetto @emergenzeprato . Data management system to manage meteo and emergency information with social media">
+    <title>Emergenzeprato by iltempe</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Emergenzeprato</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Emergenzeprato</h1>
+        <p>Gestore fonti del progetto @emergenzeprato . Data management system to manage meteo and emergency information with social media</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/TeoSoft80/Emergenzeprato">View on GitHub</a>
+        <p class="view"><a href="https://github.com/iltempe/Emergenzeprato">View the Project on GitHub <small>iltempe/Emergenzeprato</small></a></p>
 
-          <h1 id="project_title">Emergenzeprato</h1>
-          <h2 id="project_tagline">Gestore fonti del progetto @emergenzeprato . Data management system to manage meteo and emergency information with social media</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/TeoSoft80/Emergenzeprato/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/TeoSoft80/Emergenzeprato/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/iltempe/Emergenzeprato/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/iltempe/Emergenzeprato/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/iltempe/Emergenzeprato">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <p>Il sistema EmergenzePrato nasce con l’intento di fornire tramite un unico canale di segnalazioni relative al maltempo a Prato e provincia mischiando informazioni di fonti ufficiali con segnalazioni civiche.</p>
 
 <p>EmergenzePrato è un canale che puoi seguire su Twitter iscrivendoti al social network gratuitamente.</p>
 
 <p>Inoltre il servizio comunica:</p>
 
-<p>Le previsioni <a href="http://www.lamma.rete.toscana.it/previ/ita/xml/comuni_web/dati/prato.xml">Lamma</a> del giorno e le previsioni del giorno dopo relative a Prato (grazie <a href="http://open.toscana.it/">OpenToscana</a>)
-Il <a href="http://www.biometeo.it/">Biometeo</a> relativo a Prato
-Le situazioni di rischio relative a Prato provenienti dal <a href="http://www.cfr.toscana.it/">Centro Funzionale Servizio Idrogeologico Toscana</a> (grazie <a href="https://twitter.com/lucabonuc">Luca Bonuccelli</a>)
-Eventuali Aggiornamenti della <a href="http://www.protezionecivile.comune.prato.it/emergenze/">pagina web emergenze</a> della Protezione Civile di Prato
-Le temperature rilevate tramite <a href="http://www.wunderground.com/weather/api/">questo servizio</a> (grazie <a href="https://twitter.com/alf_crisci">Alfonso Crisci</a>)
-Le foto Instagram taggate con #pratopioggia
-I post inviati tramite <a href="https://www.facebook.com/groups/1546332912286384/">il gruppo Facebook</a> #emergenzeprato
-I tweet indirizzati a @emergenzeprato
-I tweet contenenti uno dei seguenti tag:</p>
-
 <ul>
-<li>#pratoterremoto per segnalazioni relative a terremoto</li>
-<li>#pratoneve per segnalazioni relative a neve a Prato</li>
-<li>#pratopioggia per segnalazioni relative a pioggia a Prato</li>
-<li>#cantagalloneve per segnalazioni relative a neve a Cantagallo</li>
-<li>#vaianoneve per segnalazioni relative a neve a Vaiano</li>
-<li>#vernioneve per segnalazioni relative a neve a Vernio</li>
+<li>Le previsioni <a href="http://www.lamma.rete.toscana.it/previ/ita/xml/comuni_web/dati/prato.xml">Lamma</a> del giorno e le previsioni del giorno dopo relative a Prato (grazie <a href="http://open.toscana.it/">OpenToscana</a>)</li>
+<li>Il <a href="http://www.biometeo.it/">Biometeo</a> relativo a Prato</li>
+<li>Le situazioni di rischio relative a Prato provenienti dal <a href="http://www.cfr.toscana.it/">Centro Funzionale Servizio Idrogeologico Toscana</a> (grazie <a href="https://twitter.com/lucabonuc">Luca Bonuccelli</a>)</li>
+<li>Eventuali Aggiornamenti della <a href="http://www.protezionecivile.comune.prato.it/emergenze/">pagina web emergenze</a> della Protezione Civile di Prato</li>
+<li>Le temperature rilevate tramite <a href="http://www.wunderground.com/weather/api/">questo servizio</a> (grazie <a href="https://twitter.com/alf_crisci">Alfonso Crisci</a>)</li>
+<li>Le foto Instagram taggate con #pratopioggia</li>
+<li>I post inviati tramite <a href="https://www.facebook.com/groups/1546332912286384/">il gruppo Facebook</a> #emergenzeprato</li>
+<li>I tweet indirizzati a @emergenzeprato</li>
+<li>I tweet contenenti uno dei seguenti tag:</li>
+<li>* #pratoterremoto per segnalazioni relative a terremoto</li>
+<li>* #pratoneve per segnalazioni relative a neve a Prato</li>
+<li>* #pratopioggia per segnalazioni relative a pioggia a Prato</li>
+<li>* #cantagalloneve per segnalazioni relative a neve a Cantagallo</li>
+<li>* #vaianoneve per segnalazioni relative a neve a Vaiano</li>
+<li>* #vernioneve per segnalazioni relative a neve a Vernio</li>
+<li><ul>
 <li>#pratovento per le segnalazioni relative a vento a Prato</li>
+</ul></li>
+<li><p>I dati vengono inviati anche su <strong>Telegram</strong> se si inviano i comandi predefiniti all’utente @emergenzeprato_bot .</p></li>
 </ul>
-
-<p>I dati vengono inviati anche su <strong>Telegram</strong> se si inviano i comandi predefiniti all’utente @emergenzeprato_bot .</p>
 
 <p>Per chi volesse implementare un servizio simile può fare riferimento a <a href="http://pratosmart.teo-soft.com/fatti-un-pratopioggia-tutto-tuo-e-chiamalo-hopratopioggiaancheio/">questo post</a> come linea guida.</p>
 
@@ -132,16 +129,12 @@ Un esempio di come va strutturata la tabella dei CRON per schedulare i task. Occ
 
 <p><a href="https://docs.google.com/presentation/d/1yeZxMVFpiL8zfhG52U2zi8MRjWqDWiptkiPIeef9ntg/pub?start=false&amp;loop=false&amp;delayms=3000">https://docs.google.com/presentation/d/1yeZxMVFpiL8zfhG52U2zi8MRjWqDWiptkiPIeef9ntg/pub?start=false&amp;loop=false&amp;delayms=3000</a> (CC-BY-SA)</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Emergenzeprato maintained by <a href="https://github.com/TeoSoft80">TeoSoft80</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/iltempe">iltempe</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -152,7 +145,6 @@ Un esempio di come va strutturata la tabella dei CRON per schedulare i task. Occ
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
