--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1>Emergenzeprato</h1>
-          <h2>Gestore fonti del progetto @emergenzeprato . Data management system to manage meteo and emergency information with social media</h2>
+          <h2>Progetto sperimentale per comunicazione rischi ed emergenze tramite social media. Data management system to inform about meteo and emergency with social media</h2>
         </header>
 
         <section id="downloads" class="clearfix">
@@ -31,7 +31,7 @@
         <hr>
 
         <section id="main_content">
-          <p>Il sistema EmergenzePrato nasce con l’intento di fornire tramite un unico canale di segnalazioni relative al maltempo a Prato e provincia mischiando informazioni di fonti ufficiali con segnalazioni civiche.</p>
+          <p>Il sistema EmergenzePrato nasce con l’intento di fornire tramite un canale di segnalazioni relative al maltempo a Prato e provincia mischiando informazioni di fonti ufficiali con segnalazioni civiche.</p>
 
 <p>EmergenzePrato è un canale che puoi seguire su Twitter iscrivendoti al social network gratuitamente.</p>
 
