--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@ Un esempio di come va strutturata la tabella dei CRON per schedulare i task. Occ
 
 <p>Per info pratosmart.org</p>
 
-<p>Qui la presentazione del progetto
-<a href="http://pratosmart.teo-soft.com/emergenzeprato/">http://pratosmart.teo-soft.com/emergenzeprato/</a></p>
+<iframe src="//www.slideshare.net/slideshow/embed_code/key/yvnzMC90msQPvd" width="425" height="355" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/pratosmart/emergenzeprato" title="EmergenzePrato" target="_blank">EmergenzePrato</a> </strong> 
 
 <p><a href="https://docs.google.com/presentation/d/1yeZxMVFpiL8zfhG52U2zi8MRjWqDWiptkiPIeef9ntg/pub?start=false&amp;loop=false&amp;delayms=3000">https://docs.google.com/presentation/d/1yeZxMVFpiL8zfhG52U2zi8MRjWqDWiptkiPIeef9ntg/pub?start=false&amp;loop=false&amp;delayms=3000</a> (CC-BY-SA)</p>
         </section>
