--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 <li>I post inviati tramite <a href="https://www.facebook.com/groups/1546332912286384/">il gruppo Facebook</a> #emergenzeprato</li>
 <li>I tweet indirizzati a @emergenzeprato</li>
 <li>I tweet contenenti uno dei seguenti tag:</li>
-<li>* #pratoterremoto per segnalazioni relative a terremoto</li>
-<li>* #pratoneve per segnalazioni relative a neve a Prato</li>
-<li>* #pratopioggia per segnalazioni relative a pioggia a Prato</li>
-<li>* #cantagalloneve per segnalazioni relative a neve a Cantagallo</li>
-<li>* #vaianoneve per segnalazioni relative a neve a Vaiano</li>
-<li>* #vernioneve per segnalazioni relative a neve a Vernio</li>
+<li>#pratoterremoto per segnalazioni relative a terremoto</li>
+<li>#pratoneve per segnalazioni relative a neve a Prato</li>
+<li>#pratopioggia per segnalazioni relative a pioggia a Prato</li>
+<li>#cantagalloneve per segnalazioni relative a neve a Cantagallo</li>
+<li>#vaianoneve per segnalazioni relative a neve a Vaiano</li>
+<li>#vernioneve per segnalazioni relative a neve a Vernio</li>
 <li>#pratovento per le segnalazioni relative a vento a Prato</li>
 
 <li><p>I dati vengono inviati anche su <strong>Telegram</strong> se si inviano i comandi predefiniti all’utente @emergenzeprato_bot .</p></li>
