--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <ul>
 <li>Le previsioni <a href="http://www.lamma.rete.toscana.it/previ/ita/xml/comuni_web/dati/prato.xml">Lamma</a> del giorno e le previsioni del giorno dopo relative a Prato (grazie <a href="http://open.toscana.it/">OpenToscana</a>)</li>
 <li>Il <a href="http://www.biometeo.it/">Biometeo</a> relativo a Prato</li>
-<li>Le situazioni di rischio relative a Prato provenienti dal <a href="http://www.cfr.toscana.it/">Centro Funzionale Servizio Idrogeologico Toscana</a> (grazie <a href="https://twitter.com/lucabonuc">Luca Bonuccelli</a>)</li>
+<li>Le situazioni di rischio relative a Prato e le misurazioni dalle stazioni provenienti dal <a href="http://www.cfr.toscana.it/">Centro Funzionale Servizio Idrogeologico Toscana</a> (grazie <a href="https://twitter.com/lucabonuc">Luca Bonuccelli</a>)</li>
 <li>Eventuali Aggiornamenti della <a href="http://www.protezionecivile.comune.prato.it/emergenze/">pagina web emergenze</a> della Protezione Civile di Prato</li>
 <li>Le temperature rilevate tramite <a href="http://www.wunderground.com/weather/api/">questo servizio</a> (grazie <a href="https://twitter.com/alf_crisci">Alfonso Crisci</a>)</li>
 <li>Le foto Instagram taggate con #pratopioggia</li>
