--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <li><p>I dati vengono inviati anche su <strong>Telegram</strong> se si inviano i comandi predefiniti all’utente @emergenzeprato_bot .</p></li>
 </ul>
 
-<p>Per chi volesse implementare un servizio simile può fare riferimento a <a href="http://pratosmart.teo-soft.com/fatti-un-pratopioggia-tutto-tuo-e-chiamalo-hopratopioggiaancheio/">questo post</a> come linea guida.</p>
+<p>Per chi volesse implementare un servizio simile può fare riferimento a <a href="http://pratosmart.teo-soft.com/fatti-un-pratopioggia-tutto-tuo-e-chiamalo-hopratopioggiaancheio/">questo post</a> come linea guida. La presente pagina è da ritenersi documentazione non definitiva per l'applicazione che è in evoluzione.</p>
 
 <h1>
 <a id="emergenzeprato-data-manager" class="anchor" href="#emergenzeprato-data-manager" aria-hidden="true"><span class="octicon octicon-link"></span></a>Emergenzeprato data manager</h1>
@@ -69,7 +69,7 @@
 
 <p>Gli script per inviare i tweet vanno eseguiti con la periodicità con cui si vuole tuittare le informazioni, è possibile creare secondo lo stesso approccio tanti script quanti se ne vogliono.</p>
 
-<p>Si preleva i dati delle fonti Lamma, Biometeo e CFR Toscana e si tuittano i dati su @emergenzeprato</p>
+<p>Si preleva i dati delle fonti e si tuittano i dati su @emergenzeprato</p>
 
 <p>L'account @emergenzeprato rituitta tutti i tweet con tag ben precisi e le foto Instagram #pratopioggia</p>
 
