--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <hr>
 
 <p>GESTIONE DEI JOB
-Un esempio di come va strutturata la tabella dei CRON per schedulare i task. Occorre schedulare i cron sulla base delle esigenze. il file storage.php aggiorna (ogni ora) i dati dai rispettivi siti alla cartella data da cui poi i BOT li prelevano. </p>
+Un esempio di come va strutturata la tabella dei CRON per schedulare i vari task. Occorre schedulare i cron sulla base delle esigenze. il file storage.php aggiorna (ogni ora) i dati dai rispettivi siti alla cartella data da cui poi i BOT li prelevano. </p>
 
 <p>(* * * * * php /home/pi/emergenzeprato/TelegramBot/getUpdates.php)</p>
 
