--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
 
 <p>Inoltre tutti i tweet taggati con un ht definito e geolocalizzazione possono essere mappati</p>
 
+<p>Twitter Bot è sviluppato a partire da <a href="https://github.com/abraham/twitteroauth">qui</a>)</p>
+
 <hr>
 
 <p>TELEGRAM</p>
 
-<p>Aggiunto Telegram bot (sviluppato da <a href="https://github.com/Eleirbag89/TelegramBotPHP">https://github.com/Eleirbag89/TelegramBotPHP</a>). </p>
+<p>Aggiunto Telegram bot</p>
 
 <ul>
 <li>Creare un bot su Telegram </li>
@@ -97,7 +99,7 @@
 <li>inviare a emergenzeprato i comandi per ricevere gli aggiornamenti come indicato qui <a href="http://pratosmart.teo-soft.com/emergenzeprato-cresce-telegram-per-sapere-il-meteo-a-prato/">http://pratosmart.teo-soft.com/emergenzeprato-cresce-telegram-per-sapere-il-meteo-a-prato/</a>
 </li>
 </ul>
-
+<p>Telegram Bot è sviluppato a partire da <a href="https://github.com/Eleirbag89/TelegramBotPHP">qui</a>)</p>
 <hr>
 
 <p>GESTIONE DEI JOB
