--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <section id="main_content">
           <p>Il sistema EmergenzePrato nasce con l’intento di fornire tramite un canale di segnalazioni relative al maltempo a Prato e provincia mischiando informazioni di fonti ufficiali con segnalazioni civiche.</p>
 
-<p>EmergenzePrato è un canale che puoi seguire su Twitter iscrivendoti al social network gratuitamente.</p>
+<p>EmergenzePrato è un canale che puoi seguire all'interno dei social iscrivendoti gratuitamente per essere informato o per interagire con il servizio.</p>
 
-<p>Inoltre il servizio comunica:</p>
+<p>Il servizio comunica:</p>
 
 <ul>
 <li>Le previsioni <a href="http://www.lamma.rete.toscana.it/previ/ita/xml/comuni_web/dati/prato.xml">Lamma</a> del giorno e le previsioni del giorno dopo relative a Prato (grazie <a href="http://open.toscana.it/">OpenToscana</a>)</li>
@@ -43,7 +43,7 @@
 <li>Le situazioni di rischio relative a Prato e le misurazioni dalle stazioni provenienti dal <a href="http://www.cfr.toscana.it/">Centro Funzionale Servizio Idrogeologico Toscana</a> (grazie <a href="https://twitter.com/lucabonuc">Luca Bonuccelli</a>)</li>
 <li>Eventuali Aggiornamenti della <a href="http://www.protezionecivile.comune.prato.it/emergenze/">pagina web emergenze</a> della Protezione Civile di Prato</li>
 <li>Le temperature rilevate tramite <a href="http://www.wunderground.com/weather/api/">questo servizio</a> (grazie <a href="https://twitter.com/alf_crisci">Alfonso Crisci</a>)</li>
-<li>Le foto Instagram taggate con #pratopioggia</li>
+<li>Le foto Instagram taggate con #pratopioggia e #emergenzeprato</li>
 <li>I post inviati tramite <a href="https://www.facebook.com/groups/1546332912286384/">il gruppo Facebook</a> #emergenzeprato</li>
 <li>I tweet indirizzati a @emergenzeprato</li>
 <li>I tweet contenenti uno dei seguenti tag:</li>
@@ -125,7 +125,7 @@ Un esempio di come va strutturata la tabella dei CRON per schedulare i vari task
 <hr>
 
 <p>CREDITS</p>
-<p>Sperimentano con questo progetto:  
+<p>Sperimentano questo progetto:  
 <a href="https://twitter.com/protcivcomunefi">la Protezione Civile di Firenze</a></p>
 
 <p>Parlano di questo progetto:
