--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 
 <p>Per chi volesse implementare un servizio simile può fare riferimento a <a href="http://pratosmart.teo-soft.com/fatti-un-pratopioggia-tutto-tuo-e-chiamalo-hopratopioggiaancheio/">questo post</a> come linea guida. La presente pagina è da ritenersi documentazione non definitiva per l'applicazione che è in evoluzione.</p>
 
+<p>Per segnalare bug o suggerire nuove funzionalità <a href="https://github.com/iltempe/Emergenzeprato/issues"> scrivi su questa pagina </a> </p>
+
 <h1>
 <a id="emergenzeprato-data-manager" class="anchor" href="#emergenzeprato-data-manager" aria-hidden="true"><span class="octicon octicon-link"></span></a>Emergenzeprato data manager</h1>
 
