--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
 <ul>
 <li>aggiungere  @emergenzeprato_bot su Telegram</li>
-<li>inviare a emergenzeprato i comandi per ricevere gli aggiornamenti come indicato qui <a href="http://pratosmart.teo-soft.com/emergenzeprato-cresce-telegram-per-sapere-il-meteo-a-prato/">http://pratosmart.teo-soft.com/emergenzeprato-cresce-telegram-per-sapere-il-meteo-a-prato/</a>
-</li>
+<li>inviare a emergenzeprato i comandi per ricevere gli aggiornamenti come indicato qui <a href="http://pratosmart.teo-soft.com/emergenzeprato-cresce-telegram-per-sapere-il-meteo-a-prato/">http://pratosmart.teo-soft.com/emergenzeprato-cresce-telegram-per-sapere-il-meteo-a-prato/</a></li>
+<li>attualmente il sistema è predisposto per inviare messaggi in modalità broadcast tramite gestione utenti in un database</li>
 </ul>
 <p>Telegram Bot è sviluppato a partire da <a href="https://github.com/Eleirbag89/TelegramBotPHP">qui</a></p>
 <hr>
