--- a/index.html
+++ b/index.html
@@ -164,4 +164,6 @@ Un esempio di come va strutturata la tabella dei CRON per schedulare i vari task
       </div>
     </div>
   </body>
+  <iframe width="100%" height="300px" frameBorder="0" src="https://umap.openstreetmap.fr/it/map/emergenzeprato_17477?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&allowEdit=false&moreControl=true&datalayersControl=true&onLoadPanel=undefined&captionBar=false"></iframe><p><a href="https://umap.openstreetmap.fr/it/map/emergenzeprato_17477">Visualliza schermo intero</a></p>
+  
 </html>
