--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@ Il sistema è in grado di registrare segnalazioni georiferite e memorizzarle per
 
 <ul>
 <li>aggiungere  @emergenzeprato_bot su Telegram</li>
-<li>inviare a emergenzeprato i comandi per ricevere gli aggiornamenti come indicato qui <a href="http://pratosmart.teo-soft.com/emergenzeprato-cresce-telegram-per-sapere-il-meteo-a-prato/">http://pratosmart.teo-soft.com/emergenzeprato-cresce-telegram-per-sapere-il-meteo-a-prato/</a></li>
-<li>attualmente il sistema è predisposto per inviare messaggi in modalità broadcast tramite gestione utenti in un database</li>
+<li>Inviare a emergenzeprato i comandi per ricevere gli aggiornamenti come indicato qui <a href="http://pratosmart.teo-soft.com/emergenzeprato-cresce-telegram-per-sapere-il-meteo-a-prato/">http://pratosmart.teo-soft.com/emergenzeprato-cresce-telegram-per-sapere-il-meteo-a-prato/</a></li>
+<li>Attualmente il sistema è predisposto per inviare messaggi in modalità broadcast tramite gestione utenti in un database. La funzione è in testing. Per abilitare le notifiche digitare /on per disabilitarle digitare /off.</li>
+<li>Se in chat si invia la propria posizione geografica il sistema consente di gestire una segnalazione (in formato testo) localizzata richiendo informazioni su cosa stia accadendo in quel luogo</li>
 </ul>
 <p>Telegram Bot è sviluppato a partire da <a href="https://github.com/Eleirbag89/TelegramBotPHP">qui</a></p>
 <hr>
