--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <li><p>I dati vengono inviati anche su <strong>Telegram</strong> se si inviano i comandi predefiniti all’utente @emergenzeprato_bot .</p></li>
 </ul>
 
-<p> Attualmente il sistema è predisposto per gestire notifiche automatiche ad una rubrica di utenti che hanno le notifiche abilitate (le notifiche si abilitano con il comando /on)
+<p> Attualmente il sistema è predisposto per gestire notifiche automatiche ad una rubrica di utenti che hanno le notifiche abilitate. Nell'attuale imlementazione le notifiche possono arrivare con ritardo perchè si basano sull'update di servizi "esterni" al sito ufficiale delle protezione civile di Prato.
 Il sistema è in grado di registrare segnalazioni georiferite e memorizzarle per mapparle </p>
 <p>Per chi volesse implementare un servizio simile può fare riferimento a <a href="http://pratosmart.teo-soft.com/fatti-un-pratopioggia-tutto-tuo-e-chiamalo-hopratopioggiaancheio/">questo post</a> come linea guida. La presente pagina è da ritenersi documentazione non definitiva per l'applicazione che è in evoluzione.</p>
 
