--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@ Un esempio di come va strutturata la tabella dei CRON per schedulare i vari task
 
 <hr>
 
+<p>GOOGLE CALENDAR</p>
+
+Le previsioni, il biometeo ed i rischi sono quotidianamente postati su questo calendario tramite relativo script.
+
+<iframe src="https://www.google.com/calendar/embed?src=pratopioggia%40gmail.com&ctz=Europe/Rome" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
 <p>SOCIAL NETWORK</p>
 
 <p>Se si vuole integrare con regole sui social network può essere usato IFTTT come usato qui
