--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@ Le previsioni, il biometeo ed i rischi sono quotidianamente postati su questo ca
 
 <iframe src="https://www.google.com/calendar/embed?src=pratopioggia%40gmail.com&ctz=Europe/Rome" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
+<p>IMPORTANTE: SE NON SI VUOLE MODIFICARE IL CODICE (O NON SI SA COME FARE) SCARICARE L'ULTIMO TAG IN RELEASE!!</p>
+
+
 <p>SOCIAL NETWORK</p>
 
 <p>Se si vuole integrare con regole sui social network può essere usato IFTTT come usato qui
