--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@ Il sistema è in grado di registrare segnalazioni georiferite e memorizzarle per
 <p>Telegram Bot è sviluppato a partire da <a href="https://github.com/Eleirbag89/TelegramBotPHP">qui</a></p>
 <hr>
 
+<p>GROUPME</p>
+
+Le comunicazioni di allerta sono postate anche in questo gruppo GroupMe pubblico.  <a href="https://groupme.com/join_group/17026641/v7LE8X">qui</a>
+
 <p>GESTIONE DEI JOB
 Un esempio di come va strutturata la tabella dei CRON per schedulare i vari task. Occorre schedulare i cron sulla base delle esigenze. il file storage.php aggiorna (ogni ora) i dati dai rispettivi siti alla cartella data da cui poi i BOT li prelevano. </p>
 
