--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 <li>Le situazioni di rischio relative a Prato e le misurazioni dalle stazioni provenienti dal <a href="http://www.cfr.toscana.it/">Centro Funzionale Servizio Idrogeologico Toscana</a> (grazie <a href="https://twitter.com/lucabonuc">Luca Bonuccelli</a>)</li>
 <li>Eventuali Aggiornamenti della <a href="http://www.protezionecivile.comune.prato.it/emergenze/">pagina web emergenze</a> della Protezione Civile di Prato</li>
 <li>Le temperature rilevate tramite <a href="http://www.wunderground.com/weather/api/">questo servizio</a> (grazie <a href="https://twitter.com/alf_crisci">Alfonso Crisci</a>)</li>
+<li>Le aree di emergenza mappate su <a href="www.openstreetmap.org">Openstreetmap</a> a partire da quanto definito dalla protezione civile di Prato in <a href="http://www.protezionecivile.comune.prato.it/?act=f&fid=1396">questa pagina</a> (grazie a Giacomo Bartalesi e David Fastelli)</li>
 <li>Le foto Instagram taggate con #pratopioggia e #emergenzeprato</li>
 <li>I post inviati tramite <a href="https://www.facebook.com/groups/1546332912286384/">il gruppo Facebook</a> #emergenzeprato</li>
 <li>I tweet indirizzati a @emergenzeprato</li>
